--- a/pipeline/docker-secret.yaml
+++ b/pipeline/docker-secret.yaml
@@ -6,5 +6,5 @@ metadata:
     tekton.dev/docker-0: https://hub.docker.com # Described below
 type: kubernetes.io/basic-auth
 stringData:
-  username: 
+  username:8 
   password: 
