--- a/pipeline/task-deploy.yaml
+++ b/pipeline/task-deploy.yaml
@@ -10,20 +10,20 @@ spec:
     params:
       - name: pathToContext
         description: The path to the build context, used by Kaniko - within the workspace
-        default: .
+        default: src
       - name: pathToYamlFile
         description: The path to the yaml file to deploy within the git source
         default: deploy.yaml
       - name: imageUrl
         description: Url of image repository
-        default: url
+        default: "registry.hub.docker.com/taroball/taro1"
       - name: imageTag
         description: Tag of the images to be used.
         default: "latest"
   steps:
     - name: update-yaml
       image: alpine
-      command: ["sed"]
+      command: ["cat"]
       args:
         - "-i"
         - "-e"
